Working on the 2.2.0 changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -97,42 +97,42 @@ The source of the interface is available in the [main PSL repository](https://gi
 Fully implemented examples can be found in the [psl-examples repository](https://github.com/linqs/psl-examples).
 Below is a simplified example of the Python interface:
 ```python
-import os
+    import os
 
-from pslpython.model import Model
-from pslpython.partition import Partition
-from pslpython.predicate import Predicate
-from pslpython.rule import Rule
+    from pslpython.model import Model
+    from pslpython.partition import Partition
+    from pslpython.predicate import Predicate
+    from pslpython.rule import Rule
 
-model = Model('sample-model')
+    model = Model('sample-model')
 
-# Add Predicates
-predicate = Predicate('Foo', closed = True, size = 2)
-model.add_predicate(predicate)
+    # Add Predicates
+    predicate = Predicate('Foo', closed = True, size = 2)
+    model.add_predicate(predicate)
 
-predicate = Predicate('Bar', closed = False, size = 2)
-model.add_predicate(predicate)
+    predicate = Predicate('Bar', closed = False, size = 2)
+    model.add_predicate(predicate)
 
-# Add Rules
-model.add_rule(Rule('0.20: Foo(A, B) -> Bar(A, B) ^2'))
-model.add_rule(Rule('0.01: !Bar(A, B) ^2'))
+    # Add Rules
+    model.add_rule(Rule('0.20: Foo(A, B) -> Bar(A, B) ^2'))
+    model.add_rule(Rule('0.01: !Bar(A, B) ^2'))
 
-# Load data.
-path = os.path.join('data', 'foo_obs.txt')
-model.get_predicate('Foo').add_data_file(Partition.OBSERVATIONS, path)
+    # Load data.
+    path = os.path.join('data', 'foo_obs.txt')
+    model.get_predicate('Foo').add_data_file(Partition.OBSERVATIONS, path)
 
-path = os.path.join('data', 'bar_targets.txt')
-model.get_predicate('Bar').add_data_file(Partition.TARGETS, path)
+    path = os.path.join('data', 'bar_targets.txt')
+    model.get_predicate('Bar').add_data_file(Partition.TARGETS, path)
 
-# Inference
-results = model.infer()
+    # Inference
+    results = model.infer()
 
-# Write out results.
-out_dir = 'inferred-predicates'
-os.makedirs(out_dir, exist_ok = True)
+    # Write out results.
+    out_dir = 'inferred-predicates'
+    os.makedirs(out_dir, exist_ok = True)
 
-out_path = os.path.join(out_dir, "bar.txt")
-results[model.get_predicate('Bar')].to_csv(out_path, sep = "\t", header = False, index = False)
+    out_path = os.path.join(out_dir, "bar.txt")
+    results[model.get_predicate('Bar')].to_csv(out_path, sep = "\t", header = False, index = False)
 ```
 
 In addition to creating models in Python, you can use the PSL python package to invoke the PSL CLI interface directory.
@@ -147,12 +147,36 @@ python -m pslpython.cli --model test.psl --data test.data
 
 ### New Java Interface
 [*7e305dfe*](https://github.com/linqs/psl/commit/7e305dfea1a0e092b43ece80f4e44f71777ee330)
-Pure Java interface  
+
+PSL 2.2.0 comes with a new Java interface.
+This interface works much like the Groovy interface with some slight differences.
+Fully implemented examples of the Java interface can be found in the [psl-examples repository](https://github.com/linqs/psl-examples).
+
+Instead of using `org.linqs.psl.groovy.PSLModel`, `org.linqs.psl.java.PSLModel` is used.
+The methods for the `PSL` model class are now explicitly named, instead of all called `add`.
+For example, instead of `model.add predicate: "Foo", ...`, you will use `model.addPredicate("Foo", ...)`.
+The full API for the PSLModel class can be found [here](https://psl.linqs.org/api/2.2.0/org/linqs/psl/java/PSLModel.html).
+
+The Groovy interface allows rules to be specified as part of the Groovy syntax.
+However, rules in the Java interface must be specified as a String.
+
+To access predicates in the Java interface, you can no longer just reference them by name with no context.
+Now, you can ask the model for a predicate by name.
+In Groovy:
+```
+Inserter inserter = dataStore.getInserter(Foo, obsPartition);
+```
+In Java:
+```
+Inserter inserter = dataStore.getInserter(model.getStandardPredicate("Foo"), obsPartition);
+```
 
 ### Groovy Interface Deprecated
 [*476dfd1e*](https://github.com/linqs/psl/commit/476dfd1e745919dc5a2cef4ac521806eb252cac1)
-Deprecate Groovy in favor of Java.
 
+With the addition of the [new Java interface](#new-java-interface), the Groovy interface has officially been deprecated.
+It will be removed from the next release of PSL.
+Dropping support for Groovy will allow us to support a wider range of Java versions (instead of just 7 and 8).
 
 ## CLI Improvements
 
@@ -168,67 +192,148 @@ To use these, a function key needs to be specified in the predicate definition, 
     - function: org.foo.bar.SimNameExternalFunction
 ```
 
-In this case, the functional predicate is `SimName` and it is specified by the `SimNameExternalFunction`.
+In this case, the functional predicate is `SimName` and it is implemented by the `SimNameExternalFunction` class.
 This can then be used in a rule like:
-`1: SimName(P1, P2) & Lived(P1, L) & Lived(P2, L) & (P1 != P2) -> Knows(P1, P2) ^2`.
+```
+1: SimName(P1, P2) & Lived(P1, L) & Lived(P2, L) & (P1 != P2) -> Knows(P1, P2) ^2
+```
 
 ### Multiple Evaluators
 [*d63a8f7e*](https://github.com/linqs/psl/commit/d63a8f7ee1c9bfb881bb53770e3e84db34c2668b)
-Added ability to specify multiple evaluators in CLI. This can be done by passing in multiple evaluators separated by spaces. eg: `./run.sh --eval CategoricalEvaluator ContinuousEvaluator`.
+
+The CLI can now use multiple evaluators in one run.
+This can be done by passing in multiple evaluators to the `--eval` argument:
+```
+java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator ContinuousEvaluator`.
+```
 
 ### Output Ground Rules
 [*62fbd2cc*](https://github.com/linqs/psl/commit/62fbd2cc20c8360c365a02be2cdc4f871a4f5798)
 [*b901e937*](https://github.com/linqs/psl/commit/b901e937ed2869b5dcc184585ea29c5fa77b1170)
-Added a new option to CLI (-gr/--groundrules) that will output the ground rules to the specified file (stdout if no path specified). e.g: `./run.sh --groundrules ground.txt`.
-Added the ability to output ground rules along with their satisfaction either to the specified file or stdout (Use --satisfaction flag). e.g: `./run.sh --satisfaction satisfaction.txt`.
+
+The CLI accepts two new arguments that can be used to see the ground rules being processed.
+`-gr`/`--groundrules` can be used to output the ground rules **before** inference is run.
+This will show the ground rules as early as possible.
+While `--satisfaction` will output ground rules along with their satisfaction value **after** inference is run.
+
+If you are concerned about an issue with your rules/data and want to see the ground rules created,
+then `--groundrules` is the option you should use.
+If you are curious about the value that different rules are taking,
+then `--satisfaction` is the option you should use.
+
+Either option can be specified without arguments, and the results will be output to stdout.
+You can also specify an optional path with either argument and the results will be output there.
 
 ### Skip Database Commit
 [*3ced4b20*](https://github.com/linqs/psl/commit/3ced4b20be80fc17403663fe16e194bcfcaf6a3a)
-Added option to skip committing atoms to database after inference (--skipCommitAtoms):
-Atoms get committed to the database after inference by default. We now provide an option to skip the commits which means that the inferred atoms will no longer be persisted in the database. 
 
-### Simple Class Names
-[*00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
-Allow simple names for classes 
+If you do not need the results of inference saved into the database,
+then you can save time by skipping the writing of results to the database using the `--skipCommitAtoms` argument.
 
 ### Remove Extra Quoting
 [*cbe7fd8a*](https://github.com/linqs/psl/commit/cbe7fd8a3c8e5dc9a296836f5574e98353328323)
-Removed extra quoting from CLI output. 
+
+Constants are no longer quoted in inferred predicate output produced by the CLI.
+This may break existing scripts that parse this output,
+but now files output by the CLI will match the format consumed by the CLI (by default).
 
 ### run.sh Takes Arguments
-run.sh in CLI psl-examples now takes blind arguments.
+
+The `run.sh` scripts in CLI implementations for `psl-examples` now takes arguments that are passed directly to the CLI.
+Specifying these arguments is equivalent to adding these arguments to the `ADDITIONAL_PSL_OPTIONS` constant.
+For example:
+```
+./run.sh -D log4j.threshold=DEBUG --postgres psl
+```
 
 ## Performance
 
 ### Reduced Memory Allocations
-Alocations
+
+A lot of effort was put into reducing the memory burden of PSL for the 2.2.0 release.
+Both in terms of allocations and total persisted memory.
+
+TODO(eriq): Get some stats
 
 ### Smaller Types
 [*9a34ce23*](https://github.com/linqs/psl/commit/9a34ce235b65cd549c28b9b64cbc94a496d1350c)
-Shorter types (short/float) 
+
+Where possible, standard types of have been replaced by their shorter sibling
+(`int` replaced with `short`, `double` replaced with `float`, etc).
+This allows us to trade unused precision for memory and speed (depending on the system architecture).
 
 ### Matrix Operations
 [*8f034fa8*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
-Added a class to handle low level matrix operations. 
+
+Added a class [`FloatMatrix`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/util/FloatMatrix.html)
+to handle low-level matrix operations.
+This classes uses the [Netlib library](https://www.netlib.org/) to call into the low-level BLAS and LAPACK libraries.
+This allows us to easily perform efficient matrix operations.
 
 ### Streaming Grounding Results
 [*8f4de846*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
-Streaming grounding results from the database to grounding. 
+
+Grounding results can now be streamed from the database using the [`QueryResultIterable`](https://psl.linqs.org/api/develop/org/linqs/psl/database/QueryResultIterable.html) class.
+This allows the user to iterate through the grounding results without needing to keep them all in memory at the same time.
 
 ### Runtime Statistics
 [*df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
-Added RuntimeStats 
 
+A new class [RuntimeStats](https://psl.linqs.org/api/develop/org/linqs/psl/util/RuntimeStats.html)
+has been introduced to keep track of JVM statistics throughout the lifetime of a PSL program.
+Setting the configuration option `runtimestats.collect` to `true` will enable the statistics collection.
+These collected stats are currently output to the `INFO` log level when the JVM terminates.
+
+Currently, memory information is automatically collected.
+In addition, the user can call the static `logDiskRead` and `logDiskWrite` methods to keep track of I/O operations.
+
+Using the statistics looks like:
+```
+eriq@MrMime:~/code/psl-examples/simple-acquaintances/cli$ ./run.sh -D runtimestats.collect=true
+Running PSL Inference
+0    [main] INFO  org.linqs.psl.cli.Launcher  - Running PSL CLI Version 2.2.0-SNAPSHOT-9335e9a
+... < Omitted in the changelog for brevity > ...
+3372 [main] INFO  org.linqs.psl.cli.Launcher  - Inference Complete
+3384 [main] INFO  org.linqs.psl.cli.Launcher  - Starting evaluation with class: org.linqs.psl.evaluation.statistics.DiscreteEvaluator.
+3423 [main] INFO  org.linqs.psl.cli.Launcher  - Evaluation results for KNOWS -- Accuracy: 0.915254, F1: 0.933333, Positive Class Precision: 0.945946, Positive Class Recall: 0.921053, Negative Class Precision: 0.863636, Negative Class Recall: 0.904762
+3423 [main] INFO  org.linqs.psl.cli.Launcher  - Evaluation complete.
+3435 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - Total Memory (bytes) -- Min:    123207680, Max:    123207680, Mean:    123207680, Count:           14
+3436 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - Free Memory (bytes)  -- Min:     88010064, Max:    116031808, Mean:    101241578, Count:           14
+3436 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - Used Memory (bytes)  -- Min:      7175872, Max:     35197616, Mean:     21966095, Count:           14
+3437 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - Max Memory (bytes)   -- Min:   1832386560, Max:   1832386560, Mean:   1832386560, Count:           14
+3437 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - IO Reads (bytes)     -- Min:            0, Max:            0, Mean:            0, Count:            0, Total:            0
+3437 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - IO Writes (bytes)    -- Min:            0, Max:            0, Mean:            0, Count:            0, Total:            0
+eriq@MrMime:~/code/psl-examples/simple-acquaintances/cli$
+```
 
 ## Miscellanea
+
+
+### Simple Class Names
+[*00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
+
+In any case where a classname is used as a configuration option or argument,
+you can now specify the classes shortname instead of its fully-qualified name.
+For example, instead of:
+```
+java -jar psl.jar --model test.psl --data test.data --eval org.linqs.psl.evaluation.statistics.DiscreteEvaluator
+```
+You can do:
+```
+java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
+```
 
 ### New Weight Learning Method: GPP
 Added GPP weight learning algorithm to PSL
 
 ### Made Data Loading Errors More Clear
 [*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
-Data loading errors 
+
+File paths were added to several data loading errors in hopes of making them more clear.
 
 ### Removed Date ConstantType
 [*df5e1b64*](https://github.com/linqs/psl/commit/df5e1b641d5274dd590bc2a917259a9e38bed464)
-Removed Date ConstantType 
+
+The `ConstantType.Date` type have been removed as predicate argument type.
+Instead, users should use `ConstantType.String` with the date represented as a string (we suggest [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601)),
+or users should use `ConstantType.Integer` and represent the date as an [Unix/Epoch time](https://en.wikipedia.org/wiki/Unix_time).
