--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -324,7 +324,17 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
 ```
 
 ### New Weight Learning Method: GPP
-Added GPP weight learning algorithm to PSL
+PSL makes use of rules to model the underlying Hinge Loss Markov Random Fields (HL-MRFs). These rules usually take form of -
+```
+10.0: Friends(A, B) -> Trusts(A, B) ^2
+5.0: Friends(A, B) & Friends(B, C) -> Trusts(A, C) ^2
+```
+Each rule begins with a weight associated with it. These weights represent how important the rule is relative to other rules. PSL supports a number of algorithms to learn these weights. With the release of PSL 2.2.0, we are now adding support for another weight learning algorithm called GPP (Gaussian Process Prior) which is  based on bayesian optimization of a user-specified domain based performance metric. To use this you can directly pass in the name to the --learn option when invoking PSL. e.g:
+```
+java -jar psl.jar --model test.psl --data test_learn.data --learn bayesian.GaussianProcessPrior
+```
+
+For further information on GPP you can refer the [research paper](LINK_TO_PAPER_GOES_HERE).
 
 ### Made Data Loading Errors More Clear
 [*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
