Added Sriram's description of BOWL.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -324,17 +324,30 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
 ```
 
 ### New Weight Learning Method: GPP
-PSL makes use of rules to model the underlying Hinge Loss Markov Random Fields (HL-MRFs). These rules usually take form of -
+Bayesian Optimization for Weight Learning (BOWL) is a new weight learning approach for PSL which makes use of Gausian process priors in a Bayesian optimization setting to search for the best set of weights for the rules. As an input, BOWL takes in a user-defined metric to optimize and computes an approximate metric function by evaluating PSL model with N strategically chosen weights for the rules. In the end it returns weights that maximize this approximation. For further details about the please see: https://linqs.soe.ucsc.edu/node/355
+
+To make use of this approach in the PSL open source package, the class name (org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior) should be passed to the -learn argument and provided with a metric function to optimize using the --eval parameter.
+
+E.g.:
 ```
-10.0: Friends(A, B) -> Trusts(A, B) ^2
-5.0: Friends(A, B) & Friends(B, C) -> Trusts(A, C) ^2
-```
-Each rule begins with a weight associated with it. These weights represent how important the rule is relative to other rules. PSL supports a number of algorithms to learn these weights. With the release of PSL 2.2.0, we are now adding support for another weight learning algorithm called GPP (Gaussian Process Prior) which is  based on bayesian optimization of a user-specified domain based performance metric. To use this you can directly pass in the name to the --learn option when invoking PSL. e.g:
-```
-java -jar psl.jar --model test.psl --data test_learn.data --learn bayesian.GaussianProcessPrior
+java -jar psl.jar --model test.psl --data test_learn.data --learn org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior --eval org.linqs.psl.evaluation.statistics.ContinuousEvaluator
 ```
 
-For further information on GPP you can refer the [research paper](LINK_TO_PAPER_GOES_HERE).
+BOWL has three main hyperparameters that can be modified for better results:
+1. -D gpp.maxiterations=25
+This sets the number of evaluations BOWL will conduct before choosing the best set of weights. 
+NOTE: A number of 100 should be reasonable. Keep in mind, time taken to perform full learning in BOWL grows quadratically to the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
+
+2. -D gppker.reldep=1.0
+This is the relative dependence value given in GPP. 
+The exploration space increases as the number of rules in the model increases. 
+A smaller value would imply that weights are very distinct are also related and hence require lesser number of iterations. 
+The value can be a positive floating point number.
+
+3. -D gpp.explore=2.0
+This parameter determines how the weights will be chosen for evaluation.
+Lower value implies, the weights chosen for evaluation will be clustered around one region.
+Higher value will lead to exploration of weights that are as distinct as possible.
 
 ### Made Data Loading Errors More Clear
 [*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
