Added final touches, reworked BOWL.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -58,13 +58,15 @@ Maven Central is the default remote repository for Maven.
 With PSL deployed there, there is no longer a need to use the old Maven repository at:
 `http://maven.linqs.org/maven/repositories/psl-releases/`.
 Old builds will continue to be hosted at the old repository for the foreseeable future.
+To find the new builds you can either search directly for `PSL` or for the group ID - `org.linqs` on Maven Central. The latest development versions are labeled as `CANARY` releases.
 
 ### Wiki Hosted on psl.linqs.org
-The PSL Wiki ([https://github.com/linqs/psl/wiki])
-and PSL Development Wiki ([https://github.com/eriq-augustine/psl/wiki])
+The PSL Wiki (https://github.com/linqs/psl/wiki)
+and PSL Development Wiki (https://github.com/eriq-augustine/psl/wiki)
 have been moved to this site at [psl.linqs.org/wiki](https://psl.linqs.org/wiki/).
 All stable and development releases going forward will have a version of the wiki available as either
-live webpages (for newer releases) or downloadable archives (for older releases).
+live webpages (for newer releases) or downloadable archives (for older releases). NOTE: Internal LINQS members can edit the Wiki pages by clicking the `Edit this Page` button at the bottom.
+
 
 ### API Reference Hosted on psl.linqs.org
 Along with the Wiki, the API reference will now also be hosted on this site at [psl.linqs.org/api](https://psl.linqs.org/api/).
@@ -78,7 +80,7 @@ Any new pull requests should be submitted there.
 
 ### Issues Moved to linqs/psl
 Along with pull requests, issues have been moved to the canonical PSL repository: [linqs/psl/issues](https://github.com/linqs/psl/issues).
-All old issues have been migrated to this repository.
+All old issues (along the with their comments and labels) have been migrated to this repository and any new issues should be submitted there.
 
 ## PSL Interfaces
 The PSL 2.2.0 release comes with two new interfaces, and deprecates one.
@@ -145,6 +147,11 @@ You can use the `pslpython` package already installed via pip:
 python -m pslpython.cli --model test.psl --data test.data
 ```
 
+Additionally, any arguments supported by the CLI interface can be passed to `pslpython.cli` as well:
+```sh
+python -m pslpython.cli --model test.psl --data test.data --eval DiscreteEvaluator -D log4j.threshold=DEBUG
+```
+
 ### New Java Interface
 [*7e305dfe*](https://github.com/linqs/psl/commit/7e305dfea1a0e092b43ece80f4e44f71777ee330)
 
@@ -202,9 +209,9 @@ This can then be used in a rule like:
 [*d63a8f7e*](https://github.com/linqs/psl/commit/d63a8f7ee1c9bfb881bb53770e3e84db34c2668b)
 
 The CLI can now use multiple evaluators in one run.
-This can be done by passing in multiple evaluators to the `--eval` argument:
+This can be done by passing by multiple evaluators to the `--eval` argument:
 ```
-java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator ContinuousEvaluator`.
+java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator ContinuousEvaluator
 ```
 
 ### Output Ground Rules
@@ -246,6 +253,8 @@ For example:
 ./run.sh -D log4j.threshold=DEBUG --postgres psl
 ```
 
+For a list of supported arguments you can use `--help`. Additionally, for a list of supported configuration options you can refer to the page titled `Configuration Options` in the wiki. 
+
 ## Performance
 
 ### Reduced Memory Allocations
@@ -258,7 +267,7 @@ TODO(eriq): Get some stats
 ### Smaller Types
 [*9a34ce23*](https://github.com/linqs/psl/commit/9a34ce235b65cd549c28b9b64cbc94a496d1350c)
 
-Where possible, standard types of have been replaced by their shorter sibling
+Where possible, standard types have been replaced by their shorter sibling
 (`int` replaced with `short`, `double` replaced with `float`, etc).
 This allows us to trade unused precision for memory and speed (depending on the system architecture).
 
@@ -324,30 +333,29 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
 ```
 
 ### New Weight Learning Method: GPP
-Bayesian Optimization for Weight Learning (BOWL) is a new weight learning approach for PSL which makes use of Gausian process priors in a Bayesian optimization setting to search for the best set of weights for the rules. As an input, BOWL takes in a user-defined metric to optimize and computes an approximate metric function by evaluating PSL model with N strategically chosen weights for the rules. In the end it returns weights that maximize this approximation. For further details about the please see: https://linqs.soe.ucsc.edu/node/355
+Bayesian Optimization for Weight Learning (BOWL) is a new weight learning approach for PSL which makes use of Gausian process priors in a Bayesian optimization setting to search for the best set of weights for rules. BOWL works by approximating a user defined metric function and evaluating the PSL model on N strategically chosen weights. It returns the set of weights that maximize this approximation. For further details about BOWL please see: https://linqs.soe.ucsc.edu/node/355
 
-To make use of this approach in the PSL open source package, the class name (org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior) should be passed to the -learn argument and provided with a metric function to optimize using the --eval parameter.
+To make use of this approach in the PSL CLI, the class name `org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior` should be passed to the `--learn` argument and a metric functino to optmize should be passed to the `--eval` parameter.
 
 E.g.:
 ```
-java -jar psl.jar --model test.psl --data test_learn.data --learn org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior --eval org.linqs.psl.evaluation.statistics.ContinuousEvaluator
+java -jar psl.jar --model test.psl --data test_learn.data --learn org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior --eval ContinuousEvaluator
 ```
 
-BOWL has three main hyperparameters that can be modified for better results:
-1. -D gpp.maxiterations=25
-This sets the number of evaluations BOWL will conduct before choosing the best set of weights. 
-NOTE: A number of 100 should be reasonable. Keep in mind, time taken to perform full learning in BOWL grows quadratically to the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
+BOWL has three main hyperparameters that can be tuned for better results:
+1. `-D gpp.maxiterations=25`
+This sets the maximum number of times that BOWL will conduct evaluations before choosing the best set of weights. 
+NOTE: A number of 100 should be reasonable. Keep in mind that the time taken to perform full learning in BOWL grows quadratically with the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
 
-2. -D gppker.reldep=1.0
+2. `-D gppker.reldep=1.0`
 This is the relative dependence value given in GPP. 
-The exploration space increases as the number of rules in the model increases. 
-A smaller value would imply that weights are very distinct are also related and hence require lesser number of iterations. 
-The value can be a positive floating point number.
+The exploration space increases as the number of rules in the model increase.
+A smaller value would imply that weights are very distinct and related, hence requiring lesser number of iterations. 
+The value should be a positive floating point number.
 
-3. -D gpp.explore=2.0
+3. `-D gpp.explore=2.0`
 This parameter determines how the weights will be chosen for evaluation.
-Lower value implies, the weights chosen for evaluation will be clustered around one region.
-Higher value will lead to exploration of weights that are as distinct as possible.
+A lower value implies that the weights chosen for evaluation will be clustered around one region whereas a higher value will lead to exploration of weights that are as distinct as possible.
 
 ### Made Data Loading Errors More Clear
 [*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
