Fix GPP link in contents.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -43,7 +43,7 @@ while the `develop` branch stays up-to-date with our development work.
    - [Runtime Statistics](#runtime-statistics)
 
  - [Miscellanea](#miscellanea)
-   - [New Weight Learning Method: GPP](#new-weight-learning-method:-gpp)
+   - [New Weight Learning Method: GPP](#new-weight-learning-method-gpp)
    - [Made Data Loading Errors More Clear](#made-data-loading-errors-more-clear)
    - [Removed Date ConstantType](#removed-date-constanttype)
 
