Add more context to GPP section.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -333,16 +333,23 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
 ```
 
 ### New Weight Learning Method: GPP
-Bayesian Optimization for Weight Learning (BOWL) is a new weight learning approach for PSL which makes use of Gausian process priors in a Bayesian optimization setting to search for the best set of weights for rules. BOWL works by approximating a user defined metric function and evaluating the PSL model on N strategically chosen weights. It returns the set of weights that maximize this approximation. For further details about BOWL please see: https://linqs.soe.ucsc.edu/node/355
+
+PSL makes use of rules to model the underlying Hinge Loss Markov Random Fields (HL-MRFs). These rules usually take form of -
+ ```
+ 10.0: Friends(A, B) -> Trusts(A, B) ^2
+ 5.0: Friends(A, B) & Friends(B, C) -> Trusts(A, C) ^2
+ ```
+Each rule has with a weight associated with it and this weight represents how important the rule is relative to other rules. PSL supports a number of algorithms to learn these weights. With the release of PSL 2.2.0, we are now adding support for a new weight learning algorithm called Gaussian Process Prior(GPP) which is based on bayesion optimization.
+Gausian process prior searches for the best set of weights for rules in a bayesian optimization setting. GPP works by approximating a user defined metric function and evaluating the PSL model on N strategically chosen weights. It returns the set of weights that maximize this approximation. For further details about GPP please see: https://linqs.soe.ucsc.edu/node/355
 
 To make use of this approach in the PSL CLI, the class name `org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior` should be passed to the `--learn` argument and a metric functino to optmize should be passed to the `--eval` parameter.
 
 E.g.:
 ```
-java -jar psl.jar --model test.psl --data test_learn.data --learn org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior --eval ContinuousEvaluator
+java -jar psl.jar --model test.psl --data test_learn.data --learn GaussianProcessPrior --eval ContinuousEvaluator
 ```
 
-BOWL has three main hyperparameters that can be tuned for better results:
+GPP has three main hyperparameters that can be tuned for better results:
 1. `-D gpp.maxiterations=25`
 This sets the maximum number of times that BOWL will conduct evaluations before choosing the best set of weights. 
 NOTE: A number of 100 should be reasonable. Keep in mind that the time taken to perform full learning in BOWL grows quadratically with the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
