--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -31,7 +31,6 @@ while the `develop` branch stays up-to-date with our development work.
    - [Multiple Evaluators](#multiple-evaluators)
    - [Output Ground Rules](#output-ground-rules)
    - [Skip Database Commit](#skip-database-update)
-   - [Simple Class Names](#simple-class-names)
    - [Remove Extra Quoting](#removed-extra-quoting)
    - [run.sh Takes Arguments](#run.sh-takes-arguments)
 
@@ -43,6 +42,7 @@ while the `develop` branch stays up-to-date with our development work.
    - [Runtime Statistics](#runtime-statistics)
 
  - [Miscellanea](#miscellanea)
+    - [Simple Class Names](#simple-class-names)
    - [New Weight Learning Method: GPP](#new-weight-learning-method-gpp)
    - [Made Data Loading Errors More Clear](#made-data-loading-errors-more-clear)
    - [Removed Date ConstantType](#removed-date-constanttype)
@@ -237,19 +237,6 @@ You can also specify an optional path with either argument and the results will 
 If you do not need the results of inference saved into the database,
 then you can save time by skipping the writing of results to the database using the `--skipCommitAtoms` argument.
 
-### Simple Class Names
-[*00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
-
-In any case where a classname is used as a configuration option or argument,
-you can now specify the classes shortname instead of its fully-qualified name.
-For example, instead of:
-```
-java -jar psl.jar --model test.psl --data test.data --eval org.linqs.psl.evaluation.statistics.DiscreteEvaluator
-```
-You can do:
-```
-java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
-```
 
 ### Remove Extra Quoting
 [*cbe7fd8a*](https://github.com/linqs/psl/commit/cbe7fd8a3c8e5dc9a296836f5574e98353328323)
@@ -331,35 +318,47 @@ eriq@MrMime:~/code/psl-examples/simple-acquaintances/cli$
 
 ## Miscellanea
 
+### Simple Class Names
+[*00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
+
+In any case where a classname is used as a configuration option or argument,
+you can now specify the classes shortname instead of its fully-qualified name.
+For example, instead of:
+```
+java -jar psl.jar --model test.psl --data test.data --eval org.linqs.psl.evaluation.statistics.DiscreteEvaluator
+```
+You can do:
+```
+java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
+```
+
 ### New Weight Learning Method: GPP
 
-PSL makes use of rules to model the underlying Hinge Loss Markov Random Fields (HL-MRFs). These rules usually take form of -
- ```
- 10.0: Friends(A, B) -> Trusts(A, B) ^2
- 5.0: Friends(A, B) & Friends(B, C) -> Trusts(A, C) ^2
- ```
-Each rule has with a weight associated with it and this weight represents how important the rule is relative to other rules. PSL supports a number of algorithms to learn these weights. With the release of PSL 2.2.0, we are now adding support for a new weight learning algorithm called Gaussian Process Prior(GPP) which is based on bayesion optimization.
-Gausian process prior searches for the best set of weights for rules in a bayesian optimization setting. GPP works by approximating a user defined metric function and evaluating the PSL model on N strategically chosen weights. It returns the set of weights that maximize this approximation. For further details about GPP please see: https://linqs.soe.ucsc.edu/node/355
+With the release of PSL 2.2.0, we are now adding support for a new weight learning algorithm called Gaussian Process Prior (GPP) which is based on bayesian optimization.
+GPP works by approximating a user defined metric function and evaluating the PSL model on a number of strategically chosen weights. It returns the set of weights that maximize this approximation. For further details about GPP please see: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355)
 
-To make use of this approach in the PSL CLI, the class name `org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior` should be passed to the `--learn` argument and a metric functino to optmize should be passed to the `--eval` parameter.
+For example, to use GPP in the PSL CLI, the class name `GaussianProcessPrior` should be passed to the `--learn` argument and the metric function to optmize should be passed to the `weightlearning.evaluator` configuration option.
 
 E.g.:
 ```
-java -jar psl.jar --model test.psl --data test_learn.data --learn GaussianProcessPrior --eval ContinuousEvaluator
+./run.sh --learn GaussianProcessPrior -D weightlearning.evaluator=ContinuousEvaluator
 ```
 
 GPP has three main hyperparameters that can be tuned for better results:
-1. `-D gpp.maxiterations=25`
-This sets the maximum number of times that BOWL will conduct evaluations before choosing the best set of weights. 
-NOTE: A number of 100 should be reasonable. Keep in mind that the time taken to perform full learning in BOWL grows quadratically with the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
+* `-D weightlearning.evaluator=ContinuousEvaluator`    
+This parameter specifies the user defined metric function that GPP uses to evaluate and optimize weights. The evaluator used depends on the task at hand. For example, to classify documents in one of several categories ([citation categories](https://github.com/linqs/psl-examples/tree/master/citation-categories)) a `CategoricalEvaluator` may be used.
 
-2. `-D gppker.reldep=1.0`
+* `-D gpp.maxiterations=25`    
+This sets the maximum number of times that BOWL will conduct evaluations before choosing the best set of weights. 
+NOTE: A value of 100 should be reasonable. Keep in mind that the time taken to perform full learning in BOWL grows quadratically with the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
+
+* `-D gppker.reldep=1.0`    
 This is the relative dependence value given in GPP. 
 The exploration space increases as the number of rules in the model increase.
 A smaller value would imply that weights are very distinct and related, hence requiring lesser number of iterations. 
 The value should be a positive floating point number.
 
-3. `-D gpp.explore=2.0`
+* `-D gpp.explore=2.0`    
 This parameter determines how the weights will be chosen for evaluation.
 A lower value implies that the weights chosen for evaluation will be clustered around one region whereas a higher value will lead to exploration of weights that are as distinct as possible.
 
